Alteração de arquivos css e inclusão de icones, e finalização da parte como funciona

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charser="UTF-8">
 		<title>ChatSchool</title>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
@@ -36,12 +37,12 @@
 		<main>
 			<section id="how-it-work">
 				<h2>Como Funciona</h2>
-				<p class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+				<p class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
 				<div class="container">
 					<div class="row">
 						<div class="col col-desktop-4">
 							<div class="icon-container">
-								icone
+								<i class="material-icons">perm_phone_msg</i>
 							</div>
 							<h3>Chat em tempo real</h3>
 							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
@@ -49,7 +50,7 @@
 						</div>
 						<div class="col col-desktop-4">
 							<div class="icon-container">
-								icone
+								<i class="material-icons">work_outline</i>
 							</div>
 							<h3>Grupo de Trabalho</h3>
 							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
@@ -57,7 +58,7 @@
 						</div>
 						<div class="col col-desktop-4">
 							<div class="icon-container">
-								icone
+								<i class="material-icons">verified_user</i>
 							</div>
 							<h3>Segurança</h3>
 							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
@@ -66,8 +67,8 @@
 					</div>
 				</div>
 			</section>
-			<section id="customers">Nossos Clientes</section>
-			<section id="team">Nossa Equipe</section>
+			<section id="customers"><h2>Nossos Clientes</h2></section>
+			<section id="team"><h2>Nossa Equipe</h2></section>
 		</main>
 		<footer id="footer">Rodapé</footer>
 	</body>
