Criação de parte de nossos clientes

--- a/index.html
+++ b/index.html
@@ -67,7 +67,29 @@
 					</div>
 				</div>
 			</section>
-			<section id="customers"><h2>Nossos Clientes</h2></section>
+			<section id="customers">
+				<h2>Nossos Clientes</h2>
+				<p class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
+				<div class="container">
+					<div class="row">
+						<div class="col col-desktop-3"><img src="images/clients/icon1.png" alt=""></div>
+						<div class="col col-desktop-3"><img src="images/clients/icon2.png" alt=""></div>
+						<div class="col col-desktop-3"><img src="images/clients/icon3.png" alt=""></div>
+						<div class="col col-desktop-3"><img src="images/clients/icon4.png" alt=""></div>
+					</div>
+					<div class="row">
+						<div class="col col-desktop-3"><img src="images/clients/icon5.png" alt=""></div>
+						<div class="col col-desktop-3"><img src="images/clients/icon6.png" alt=""></div>
+						<div class="col col-desktop-3"><img src="images/clients/icon7.png" alt=""></div>
+						<div class="col col-desktop-3"><img src="images/clients/icon8.png" alt=""></div>
+					</div>
+					<div class="row">
+						<div class="col-desktop-12">
+						   <a href="" class="btn">Todos os Clientes<i class="material-icons">play_arrow</i></a>
+						</div>
+					</div>				
+				</div>
+			</section>
 			<section id="team"><h2>Nossa Equipe</h2></section>
 		</main>
 		<footer id="footer">Rodapé</footer>
