--- a/index.html
+++ b/index.html
@@ -90,8 +90,64 @@
 					</div>				
 				</div>
 			</section>
-			<section id="team"><h2>Nossa Equipe</h2></section>
+			<section id="team">
+				<h2>Nossa Equipe</h2>
+				<p class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
+				<div class="container">
+					<div class="row">
+						<div class="col col-offset-desktop-1 col-desktop-2">
+							<div class="img-box-round"><img src="images/team/team1.jpg" alt=""></div>
+							<p class="img-box-label">Lorem ipsum</p>
+						</div>
+						<div class="col col-desktop-2">
+							<div class="img-box-round"><img src="images/team/team2.jpg" alt=""></div>
+							<p class="img-box-label">Lorem ipsum</p>
+						</div>
+						<div class="col col-desktop-2">
+							<div class="img-box-round"><img src="images/team/team3.jpg" alt=""></div>
+							<p class="img-box-label">Lorem ipsum</p>
+						</div>
+						<div class="col col-desktop-2">
+							<div class="img-box-round"><img src="images/team/team4.jpg" alt=""></div>
+							<p class="img-box-label">Lorem ipsum</p>
+						</div>
+						<div class="col col-desktop-2">
+							<div class="img-box-round"><img src="images/team/team5.jpg" alt=""></div>
+							<p class="img-box-label">Lorem ipsum</p>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
-		<footer id="footer">Rodapé</footer>
+		<footer id="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col col-offset-desktop-1 col-desktop-3">
+					<p><a href=""><img src="images/logo.png" alt="Logo da Chatschool"></a></p>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+				</div>
+				<div class="col col-offset-desktop-1 col-desktop-2">
+					<h3>Menu</h3>
+					<nav>
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="#">Quem Somos</a></li>
+							<li><a href="#">Clientes</a></li>
+							<li><a href="#">Equipe</a></li>
+							<li><a href="#">Contato</a></li>
+						</ul>
+					</nav>					
+				</div>
+				<div class="col col-desktop-3 social">
+					<a href=""><img src="images/social-facebook.png" alt=""></a>
+					<a href=""><img src="images/social-twitter.png" alt=""></a>
+					<a href=""><img src="images/social-youtube.png" alt=""></a>
+				</div>
+			</div>
+		</div>
+		</footer>
+		<div id="copyright">
+			&copy; Chatschool - 2019 - Todos os direitos reservados
+		</div>		
 	</body>
 </html>
