Criaçao de paginas, quem somos, clientes, equipe, e estilizaçao das mesmas

--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!doctype html>
 <html lang="pt-br">
 	<head>
-		<meta charser="UTF-8">
+		<meta charset="UTF-8">
 		<title>ChatSchool</title>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<link href="css/style.css" rel="stylesheet">
+		<link href="css/pages/home.css" rel="stylesheet">
 	</head>
 	<body>
-		<header id="header">
+		<header id="header" class="page-home">
 			<div class="container">
 				<div class="row">
 					<div class="col col-desktop-3">
-						<a href="index.html"><img src="images/logo.png" alt="Logo da ChatSchool"></a>
+						<a href="/"><img src="images/logo.png" alt="Logo da ChatSchool"></a>
 					</div>
 					<div class="col col-desktop-9">
 						<nav>
 							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li><a href="#">Quem Somos</a></li>
-								<li><a href="#">Clientes</a></li>
-								<li><a href="#">Equipe</a></li>
-								<li><a href="#">Contato</a></li>
+								<li><a href="index.html" class="active">Home</a></li>
+								<li><a href="quem_somos.html">Quem Somos</a></li>
+								<li><a href="clientes.html">Clientes</a></li>
+								<li><a href="equipe.html">Equipe</a></li>
+								<li><a href="contato.html">Contato</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -29,13 +29,13 @@
 				<div class="row">
 					<div class="col col-desktop-12 title">
 						<h1>Alta Produtividade em tempo real</h1>
-						<a href="" class="btn">Começar agora</a>
+						<a href="produto.html" class="btn">Começar agora</a>
 					</div>
 				</div>
 			</div>
 		</header>
 		<main>
-			<section id="how-it-work">
+			<section id="how-it-work" class="section section-center">
 				<h2>Como Funciona</h2>
 				<p class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
 				<div class="container">
@@ -67,7 +67,7 @@
 					</div>
 				</div>
 			</section>
-			<section id="customers">
+			<section id="customers" class="section section-center">
 				<h2>Nossos Clientes</h2>
 				<p class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
 				<div class="container">
@@ -90,7 +90,7 @@
 					</div>				
 				</div>
 			</section>
-			<section id="team">
+			<section id="team" class="section section-center">
 				<h2>Nossa Equipe</h2>
 				<p class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
 				<div class="container">
@@ -131,10 +131,10 @@
 					<nav>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="#">Quem Somos</a></li>
-							<li><a href="#">Clientes</a></li>
-							<li><a href="#">Equipe</a></li>
-							<li><a href="#">Contato</a></li>
+							<li><a href="quem_somos.html">Quem Somos</a></li>
+							<li><a href="clientes.html">Clientes</a></li>
+							<li><a href="equipe.html">Equipe</a></li>
+							<li><a href="contato.html">Contato</a></li>
 						</ul>
 					</nav>					
 				</div>
