Correçao de imagens na tela 'Quem somos'

--- a/quem_somos.html
+++ b/quem_somos.html
@@ -38,7 +38,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col col-desktop-4">
-                            <img src="/images/quem-somos/quem-somos_01.jpg" alt="">
+                            <img src="images/quem/quem01.jpg" alt="">
                         </div>
                         <div class="col col-desktop-8">
                             <h2>Quem Somos</h2>
@@ -53,17 +53,17 @@
              <div class="container">
                  <div class="row">
                      <div class="col col-desktop-4">
-                        <img src="/images/quem-somos/quem-somos_02.jpg" alt="">
+                        <img src="images/quem/quem02.jpg" alt="">
                         <h2>Missão</h2>
                         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock</p>
                      </div>
                      <div class="col col-desktop-4">
-                        <img src="/images/quem-somos/quem-somos_03.jpg" alt="">
+                        <img src="images/quem/quem03.jpg" alt="">
                         <h2>Visão</h2>
                         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock</p>
                      </div>
                      <div class="col col-desktop-4">
-                        <img src="/images/quem-somos/quem-somos_04.jpg" alt="">
+                        <img src="images/quem/quem04.jpg" alt="">
                         <h2>Valores</h2>
                         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock</p>
                      </div>
