--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col col-desktop-3">
-						<a href="/"><img src="images/logo.png" alt="Logo da ChatSchool"></a>
+						<a href="index.html"><img src="images/logo.png" alt="Logo da ChatSchool"></a>
 					</div>
 					<div class="col col-desktop-9">
 						<nav>
