--- a/equipe.html
+++ b/equipe.html
@@ -2,6 +2,8 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>ChatSchool - Equipe</title>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -43,47 +45,137 @@
                 </div>
                 <div class="container">
 					<div class="row">
-						<div class="col col-offset-desktop-1 col-desktop-2">
+						<div class="team-member col col-offset-desktop-1 col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team1.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
+							<div class="description">
+								<h4>Lorem Ipsum</h4>
+								<p>Lorem ipstum lorem ipsum lorem ipsum</p>
+								<div class="social">
+									<a href=""><img src="images/social-facebook.png" alt=""></a>
+									<a href=""><img src="images/social-twitter.png" alt=""></a>
+									<a href=""><img src="images/social-youtube.png" alt=""></a>
+								</div>
+							</div>
 						</div>
-						<div class="col col-desktop-2">
+						<div class="team-member col col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team2.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
+							<div class="description">
+								<h4>Lorem Ipsum</h4>
+								<p>Lorem ipstum lorem ipsum lorem ipsum</p>
+								<div class="social">
+									<a href=""><img src="images/social-facebook.png" alt=""></a>
+									<a href=""><img src="images/social-twitter.png" alt=""></a>
+									<a href=""><img src="images/social-youtube.png" alt=""></a>
+								</div>
+							</div>
 						</div>
-						<div class="col col-desktop-2">
+						<div class="team-member col col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team3.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
+							<div class="description">
+								<h4>Lorem Ipsum</h4>
+								<p>Lorem ipstum lorem ipsum lorem ipsum</p>
+								<div class="social">
+									<a href=""><img src="images/social-facebook.png" alt=""></a>
+									<a href=""><img src="images/social-twitter.png" alt=""></a>
+									<a href=""><img src="images/social-youtube.png" alt=""></a>
+								</div>
+							</div>
 						</div>
-						<div class="col col-desktop-2">
+						<div class="team-member col col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team4.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
+							<div class="description">
+								<h4>Lorem Ipsum</h4>
+								<p>Lorem ipstum lorem ipsum lorem ipsum</p>
+								<div class="social">
+									<a href=""><img src="images/social-facebook.png" alt=""></a>
+									<a href=""><img src="images/social-twitter.png" alt=""></a>
+									<a href=""><img src="images/social-youtube.png" alt=""></a>
+								</div>
+							</div>
 						</div>
-						<div class="col col-desktop-2">
+						<div class="team-member col col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team5.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
+							<div class="description">
+								<h4>Lorem Ipsum</h4>
+								<p>Lorem ipstum lorem ipsum lorem ipsum</p>
+								<div class="social">
+									<a href=""><img src="images/social-facebook.png" alt=""></a>
+									<a href=""><img src="images/social-twitter.png" alt=""></a>
+									<a href=""><img src="images/social-youtube.png" alt=""></a>
+								</div>
+							</div>
 						</div>
                     </div>
 					<div class="row">
-						<div class="col col-offset-desktop-1 col-desktop-2">
+						<div class="team-member team-member col col-offset-desktop-1 col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team1.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
+							<div class="description">
+								<h4>Lorem Ipsum</h4>
+								<p>Lorem ipstum lorem ipsum lorem ipsum</p>
+								<div class="social">
+									<a href=""><img src="images/social-facebook.png" alt=""></a>
+									<a href=""><img src="images/social-twitter.png" alt=""></a>
+									<a href=""><img src="images/social-youtube.png" alt=""></a>
+								</div>
+							</div>
 						</div>
-						<div class="col col-desktop-2">
+						<div class="team-member col col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team2.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
+							<div class="description">
+								<h4>Lorem Ipsum</h4>
+								<p>Lorem ipstum lorem ipsum lorem ipsum</p>
+								<div class="social">
+									<a href=""><img src="images/social-facebook.png" alt=""></a>
+									<a href=""><img src="images/social-twitter.png" alt=""></a>
+									<a href=""><img src="images/social-youtube.png" alt=""></a>
+								</div>
+							</div>
 						</div>
-						<div class="col col-desktop-2">
+						<div class="team-member col col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team3.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
+							<div class="description">
+								<h4>Lorem Ipsum</h4>
+								<p>Lorem ipstum lorem ipsum lorem ipsum</p>
+								<div class="social">
+									<a href=""><img src="images/social-facebook.png" alt=""></a>
+									<a href=""><img src="images/social-twitter.png" alt=""></a>
+									<a href=""><img src="images/social-youtube.png" alt=""></a>
+								</div>
+							</div>
 						</div>
-						<div class="col col-desktop-2">
+						<div class="team-member col col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team4.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
+							<div class="description">
+								<h4>Lorem Ipsum</h4>
+								<p>Lorem ipstum lorem ipsum lorem ipsum</p>
+								<div class="social">
+									<a href=""><img src="images/social-facebook.png" alt=""></a>
+									<a href=""><img src="images/social-twitter.png" alt=""></a>
+									<a href=""><img src="images/social-youtube.png" alt=""></a>
+								</div>
+							</div>
 						</div>
-						<div class="col col-desktop-2">
+						<div class="team-member col col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team5.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
+							<div class="description">
+								<h4>Lorem Ipsum</h4>
+								<p>Lorem ipstum lorem ipsum lorem ipsum</p>
+								<div class="social">
+									<a href=""><img src="images/social-facebook.png" alt=""></a>
+									<a href=""><img src="images/social-twitter.png" alt=""></a>
+									<a href=""><img src="images/social-youtube.png" alt=""></a>
+								</div>
+							</div>
 						</div>
 					</div>                    
 				</div>
