--- a/contato.html
+++ b/contato.html
@@ -13,10 +13,10 @@
 		<header id="header" class="page-contato">
 			<div class="container">
 				<div class="row">
-					<div class="col col-desktop-3">
+					<div class="col col-desktop-3 col-6">
 						<a href="index.html"><img src="images/logo.png" alt="Logo da ChatSchool"></a>
 					</div>
-					<div class="col col-desktop-9">
+					<div class="col col-desktop-9 col-6">
 						<nav>
 							<ul>
 								<li><a href="index.html">Home</a></li>
@@ -41,7 +41,7 @@
                 <p class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
                 <div class="container">
                     <form class="row">
-                        <div class="col col-desktop-6">
+                        <div class="col col-desktop-6 col-6">
                             <div class="input-control">
                                 <input id="nome" name="nome" type="text" placeholder="Nome">
                                 <label for="nome">Nome</label>
@@ -55,7 +55,7 @@
                                 <label for="telefone">Telefone</label>
                             </div>
                         </div>
-                        <div class="col col-desktop-6">
+                        <div class="col col-desktop-6 col-6">
                             <div class="input-control">
                                 <textarea id="mensagem" name="mensagem" cols="30" rows="10" placeholder="Mensagem"></textarea>
                                 <label for="mensagem">Mensagem</label>
@@ -73,7 +73,7 @@
 					<p><a href=""><img src="images/logo.png" alt="Logo da Chatschool"></a></p>
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 				</div>
-				<div class="col col-offset-desktop-1 col-desktop-2">
+				<div class="col col-offset-desktop-1 col-desktop-2 col-2">
 					<h3>Menu</h3>
 					<nav>
 						<ul>
@@ -85,7 +85,7 @@
 						</ul>
 					</nav>					
 				</div>
-				<div class="col col-desktop-3 social">
+				<div class="col col-desktop-3 social col-4">
 					<a href=""><img src="images/social-facebook.png" alt=""></a>
 					<a href=""><img src="images/social-twitter.png" alt=""></a>
 					<a href=""><img src="images/social-youtube.png" alt=""></a>
