--- a/equipe.html
+++ b/equipe.html
@@ -13,10 +13,10 @@
 		<header id="header" class="page-equipe">
 			<div class="container">
 				<div class="row">
-					<div class="col col-desktop-3">
+					<div class="col col-desktop-3 col-6">
 						<a href="index.html"><img src="images/logo.png" alt="Logo da ChatSchool"></a>
 					</div>
-					<div class="col col-desktop-9">
+					<div class="col col-desktop-9 col-6">
 						<nav>
 							<ul>
 								<li><a href="index.html">Home</a></li>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="container">
 					<div class="row">
-						<div class="team-member col col-offset-desktop-1 col-desktop-2">
+						<div class="team-member col-2 col col-offset-desktop-1 col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team1.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
 							<div class="description">
@@ -58,7 +58,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="team-member col col-desktop-2">
+						<div class="team-member col-2 col col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team2.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
 							<div class="description">
@@ -71,7 +71,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="team-member col col-desktop-2">
+						<div class="team-member col-2 col col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team3.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
 							<div class="description">
@@ -84,7 +84,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="team-member col col-desktop-2">
+						<div class="team-member col-2 col col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team4.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
 							<div class="description">
@@ -97,7 +97,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="team-member col col-desktop-2">
+						<div class="team-member col-2 col col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team5.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
 							<div class="description">
@@ -112,7 +112,7 @@
 						</div>
                     </div>
 					<div class="row">
-						<div class="team-member team-member col col-offset-desktop-1 col-desktop-2">
+						<div class="team-member col-2 col col-offset-desktop-1 col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team1.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
 							<div class="description">
@@ -125,7 +125,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="team-member col col-desktop-2">
+						<div class="team-member col-2 col col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team2.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
 							<div class="description">
@@ -138,7 +138,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="team-member col col-desktop-2">
+						<div class="team-member col-2 col col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team3.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
 							<div class="description">
@@ -151,7 +151,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="team-member col col-desktop-2">
+						<div class="team-member col-2 col col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team4.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
 							<div class="description">
@@ -164,7 +164,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="team-member col col-desktop-2">
+						<div class="team-member col-2 col col-desktop-2">
 							<div class="img-box-round"><img src="images/team/team5.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
 							<div class="description">
@@ -188,7 +188,7 @@
 					<p><a href=""><img src="images/logo.png" alt="Logo da Chatschool"></a></p>
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 				</div>
-				<div class="col col-offset-desktop-1 col-desktop-2">
+				<div class="col col-offset-desktop-1 col-desktop-2 col-2">
 					<h3>Menu</h3>
 					<nav>
 						<ul>
@@ -200,7 +200,7 @@
 						</ul>
 					</nav>					
 				</div>
-				<div class="col col-desktop-3 social">
+				<div class="col col-desktop-3 social col-4">
 					<a href=""><img src="images/social-facebook.png" alt=""></a>
 					<a href=""><img src="images/social-twitter.png" alt=""></a>
 					<a href=""><img src="images/social-youtube.png" alt=""></a>
