--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
 				<p class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
 				<div class="container">
 					<div class="row">
-						<div class="col col-desktop-3"><img src="images/clients/icon1.png" alt=""></div>
-						<div class="col col-desktop-3"><img src="images/clients/icon2.png" alt=""></div>
-						<div class="col col-desktop-3"><img src="images/clients/icon3.png" alt=""></div>
-						<div class="col col-desktop-3"><img src="images/clients/icon4.png" alt=""></div>
+						<div class="col col-desktop-3 col-3"><img src="images/clients/icon1.png" alt=""></div>
+						<div class="col col-desktop-3 col-3"><img src="images/clients/icon2.png" alt=""></div>
+						<div class="col col-desktop-3 col-3"><img src="images/clients/icon3.png" alt=""></div>
+						<div class="col col-desktop-3 col-3"><img src="images/clients/icon4.png" alt=""></div>
 					</div>
 					<div class="row">
-						<div class="col col-desktop-3"><img src="images/clients/icon5.png" alt=""></div>
-						<div class="col col-desktop-3"><img src="images/clients/icon6.png" alt=""></div>
-						<div class="col col-desktop-3"><img src="images/clients/icon7.png" alt=""></div>
-						<div class="col col-desktop-3"><img src="images/clients/icon8.png" alt=""></div>
+						<div class="col col-desktop-3 col-3"><img src="images/clients/icon5.png" alt=""></div>
+						<div class="col col-desktop-3 col-3"><img src="images/clients/icon6.png" alt=""></div>
+						<div class="col col-desktop-3 col-3"><img src="images/clients/icon7.png" alt=""></div>
+						<div class="col col-desktop-3 col-3"><img src="images/clients/icon8.png" alt=""></div>
 					</div>
 					<div class="row">
 						<div class="col-desktop-12">
@@ -97,23 +97,23 @@
 				<p class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
 				<div class="container">
 					<div class="row">
-						<div class="col col-offset-desktop-1 col-desktop-2">
+						<div class="col col-offset-desktop-1 col-desktop-2 col-2">
 							<div class="img-box-round"><img src="images/team/team1.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
 						</div>
-						<div class="col col-desktop-2">
+						<div class="col col-desktop-2 col-2">
 							<div class="img-box-round"><img src="images/team/team2.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
 						</div>
-						<div class="col col-desktop-2">
+						<div class="col col-desktop-2 col-2">
 							<div class="img-box-round"><img src="images/team/team3.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
 						</div>
-						<div class="col col-desktop-2">
+						<div class="col col-desktop-2 col-2">
 							<div class="img-box-round"><img src="images/team/team4.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
 						</div>
-						<div class="col col-desktop-2">
+						<div class="col col-desktop-2 col-2">
 							<div class="img-box-round"><img src="images/team/team5.jpg" alt=""></div>
 							<p class="img-box-label">Lorem ipsum</p>
 						</div>
