--- a/contato.html
+++ b/contato.html
@@ -1,100 +1,140 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">		
-		<title>ChatSchool - Contato</title>
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<link href="css/pages/contato.css" rel="stylesheet">
-	</head>
-	<body>
-		<header id="header" class="page-contato">
-			<div class="container">
-				<div class="row">
-					<div class="col col-desktop-3 col-6">
-						<a href="index.html"><img src="images/logo.png" alt="Logo da ChatSchool"></a>
-					</div>
-					<div class="col col-desktop-9 col-6">
-						<nav>
-							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li><a href="quem_somos.html">Quem Somos</a></li>
-								<li><a href="clientes.html">Clientes</a></li>
-								<li><a href="equipe.html">Equipe</a></li>
-								<li><a href="contato.html" class="active">Contato</a></li>
-							</ul>
-						</nav>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col col-desktop-12 title">
-						<h1>Alta Produtividade em tempo real</h1>
-					</div>
-				</div>
-			</div>
-		</header>
-		<main>
-            <section class="section section-center">
-                <h2>Contato</h2>
-                <p class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
-                <div class="container">
-                    <form class="row">
-                        <div class="col col-desktop-6 col-6">
-                            <div class="input-control">
-                                <input id="nome" name="nome" type="text" placeholder="Nome">
-                                <label for="nome">Nome</label>
-                            </div>
-                            <div class="input-control">
-                                <input id="email" name="email" type="email"  placeholder="E-mail">
-                                <label for="email">E-mail</label>
-                            </div>
-                            <div class="input-control">
-                                <input id="telefone" name="telefone" type="number" placeholder="Telefone">
-                                <label for="telefone">Telefone</label>
-                            </div>
-                        </div>
-                        <div class="col col-desktop-6 col-6">
-                            <div class="input-control">
-                                <textarea id="mensagem" name="mensagem" cols="30" rows="10" placeholder="Mensagem"></textarea>
-                                <label for="mensagem">Mensagem</label>
-                            </div>
-                        </div>
-                            <input type="submit" value="Enviar" class="btn orange">
-                    </form>
-                </div>
-            </section>
-		</main>
-		<footer id="footer">
-		<div class="container">
-			<div class="row">
-				<div class="col col-offset-desktop-1 col-desktop-3">
-					<p><a href=""><img src="images/logo.png" alt="Logo da Chatschool"></a></p>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-				</div>
-				<div class="col col-offset-desktop-1 col-desktop-2 col-2">
-					<h3>Menu</h3>
-					<nav>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="quem_somos.html">Quem Somos</a></li>
-							<li><a href="clientes.html">Clientes</a></li>
-							<li><a href="equipe.html">Equipe</a></li>
-							<li><a href="contato.html">Contato</a></li>
-						</ul>
-					</nav>					
-				</div>
-				<div class="col col-desktop-3 social col-4">
-					<a href=""><img src="images/social-facebook.png" alt=""></a>
-					<a href=""><img src="images/social-twitter.png" alt=""></a>
-					<a href=""><img src="images/social-youtube.png" alt=""></a>
-				</div>
-			</div>
-		</div>
-		</footer>
-		<div id="copyright">
-			&copy; Chatschool - 2019 - Todos os direitos reservados
-		</div>		
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Gabi e Felipe</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link href="css/pages/contato.css" rel="stylesheet" />
+  </head>
+  <body>
+    <header id="header" class="page-contato">
+      <div class="container">
+        <div class="row">
+          <div class="col col-desktop-9 col-6">
+            <nav>
+              <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="quem_somos.html">Noivos</a></li>
+                <li><a href="clientes.html">Padrinhos</a></li>
+                <li><a href="local.html">Local</a></li>
+                <li><a href="contato.html">Lista de Presentes</a></li>
+                <li>
+                  <a href="contato.html" class="active">Confirmar Presença</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col col-desktop-12 title">
+            <h1>Alta Produtividade em tempo real</h1>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="section section-center">
+        <h2>Contato</h2>
+        <p class="subtitle">
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's
+        </p>
+        <div class="container">
+          <form class="row">
+            <div class="col col-desktop-6 col-6">
+              <div class="input-control">
+                <input id="nome" name="nome" type="text" placeholder="Nome" />
+                <label for="nome">Nome</label>
+              </div>
+              <div class="input-control">
+                <input
+                  id="email"
+                  name="email"
+                  type="email"
+                  placeholder="E-mail"
+                />
+                <label for="email">E-mail</label>
+              </div>
+              <div class="input-control">
+                <input
+                  id="telefone"
+                  name="telefone"
+                  type="number"
+                  placeholder="Telefone"
+                />
+                <label for="telefone">Telefone</label>
+              </div>
+            </div>
+            <div class="col col-desktop-6 col-6">
+              <div class="input-control">
+                <textarea
+                  id="mensagem"
+                  name="mensagem"
+                  cols="30"
+                  rows="10"
+                  placeholder="Mensagem"
+                ></textarea>
+                <label for="mensagem">Mensagem</label>
+              </div>
+            </div>
+            <input type="submit" value="Enviar" class="btn orange" />
+          </form>
+        </div>
+      </section>
+    </main>
+    <footer id="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col col-offset-desktop-1 col-desktop-3">
+            <p>
+              <a href=""
+                ><img src="images/logo.png" alt="Logo da Chatschool"
+              /></a>
+            </p>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book. It has
+              survived not only five centuries, but also the leap into
+              electronic typesetting, remaining essentially unchanged. It was
+              popularised in the 1960s with the release of Letraset sheets
+              containing Lorem Ipsum passages, and more recently with desktop
+              publishing software like Aldus PageMaker including versions of
+              Lorem Ipsum.
+            </p>
+          </div>
+          <div class="col col-offset-desktop-1 col-desktop-2 col-2">
+            <h3>Menu</h3>
+            <nav>
+              <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="quem_somos.html">Quem Somos</a></li>
+                <li><a href="clientes.html">Clientes</a></li>
+                <li><a href="equipe.html">Equipe</a></li>
+                <li><a href="contato.html">Contato</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="col col-desktop-3 social col-4">
+            <a href=""><img src="images/social-facebook.png" alt="" /></a>
+            <a href=""><img src="images/social-twitter.png" alt="" /></a>
+            <a href=""><img src="images/social-youtube.png" alt="" /></a>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <div id="copyright">
+      &copy; Chatschool - 2019 - Todos os direitos reservados
+    </div>
+  </body>
 </html>
