--- a/local.html
+++ b/local.html
@@ -24,9 +24,9 @@
               <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="quem_somos.html">Noivos</a></li>
-                <li><a href="clientes.html">Padrinhos</a></li>
+                <li><a href="padrinhos.html">Padrinhos</a></li>
                 <li><a href="local.html" class="active">Local</a></li>
-                <li><a href="contato.html">Lista de Presentes</a></li>
+                <li><a href="presentes.html">Lista de Presentes</a></li>
                 <li><a href="contato.html">Confirmar Presença</a></li>
               </ul>
             </nav>
@@ -35,7 +35,7 @@
         <div class="row" id="local">
           <div class="col col-desktop-12 title">
             <h1>Espaço Nobre Eventos</h1>
-            <h2>10/09/2022 - 16 horas</h2>
+            <h2>10/09/2022 - 15h30</h2>
           </div>
         </div>
       </div>
@@ -77,9 +77,9 @@
               <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="quem_somos.html">Noivos</a></li>
-                <li><a href="clientes.html">Padrinhos</a></li>
+                <li><a href="padrinhos.html">Padrinhos</a></li>
                 <li><a href="local.html">Local</a></li>
-                <li><a href="contato.html">Lista de Presentes</a></li>
+                <li><a href="presentes.html">Lista de Presentes</a></li>
                 <li><a href="contato.html">Confirmar Presença</a></li>
               </ul>
             </nav>
@@ -88,7 +88,7 @@
       </div>
     </footer>
     <div id="copyright">
-      &copy; Chatschool - 2019 - Todos os direitos reservados
+      &copy; Felipe e Gabriela - 10/09/2022 - Toda a felicidade reservada
     </div>
   </body>
 </html>
