--- a/quem_somos.html
+++ b/quem_somos.html
@@ -24,17 +24,18 @@
               <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="quem_somos.html" class="active">Noivos</a></li>
-                <li><a href="clientes.html">Padrinhos</a></li>
+                <li><a href="padrinhos.html">Padrinhos</a></li>
                 <li><a href="local.html">Local</a></li>
-                <li><a href="contato.html">Lista de Presentes</a></li>
+                <li><a href="presentes.html">Lista de Presentes</a></li>
                 <li><a href="contato.html">Confirmar Presença</a></li>
               </ul>
             </nav>
           </div>
         </div>
-        <div class="row">
-          <div class="col col-desktop-12 title">
-            <h1>Alta Produtividade em tempo real</h1>
+        <div class="row" id="noivos">
+          <div class="col col-desktop-7 title">
+            <h1>Noivos</h1>
+            <h2>10/09/2022 - 15h30</h2>
           </div>
         </div>
       </div>
@@ -44,10 +45,31 @@
         <div class="container">
           <div class="row">
             <div id="img-box" class="col col-desktop-4 col-6">
-              <img src="images/quem/quem01.jpg" alt="" />
+              <img src="images/quem/quem01.jpeg" alt="" />
             </div>
             <div class="col col-desktop-8">
-              <h2>Quem Somos</h2>
+              <h2>Gabriela</h2>
+              <p>
+                Ela tem o sorriso fácil, que encanta qualquer um. Pode até
+                tentar parecer tímida em algumas ocasições, mas adora conversar.
+                Tem a habilidade de conversar com toda e qualquer pessoa
+                possível. Caminhou ao meu lado ao longo desses 6 anos me
+                ajudando a me encontrar em quem sou hoje. Me apoia nos meus
+                projetos, me incentiva, e me da coragem de enfrentar maus
+                desafios quando estou cheio de inseguranças. Me ajudou a formar
+                após longos anos de espera, e tem me auxiliado em cada
+                conquistar que antes era minha e agora é nossa. E além disso, me
+                deu a oportunidade de ser papai da Amora.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section" id="intro">
+        <div class="container">
+          <div class="row">
+            <div class="col col-desktop-8">
+              <h2>Felipe</h2>
               <p>
                 Contrary to popular belief, Lorem Ipsum is not simply random
                 text. It has roots in a piece of classical Latin literature from
@@ -58,38 +80,8 @@
                 classical literature, discovered the undoubtable source.
               </p>
             </div>
-          </div>
-        </div>
-      </section>
-      <section class="section section-center" id="valores">
-        <div class="container">
-          <div class="row">
-            <div class="col col-desktop-4">
-              <img src="images/quem/quem02.jpg" alt="" />
-              <h2>Missão</h2>
-              <p>
-                Contrary to popular belief, Lorem Ipsum is not simply random
-                text. It has roots in a piece of classical Latin literature from
-                45 BC, making it over 2000 years old. Richard McClintock
-              </p>
-            </div>
-            <div class="col col-desktop-4">
-              <img src="images/quem/quem03.jpg" alt="" />
-              <h2>Visão</h2>
-              <p>
-                Contrary to popular belief, Lorem Ipsum is not simply random
-                text. It has roots in a piece of classical Latin literature from
-                45 BC, making it over 2000 years old. Richard McClintock
-              </p>
-            </div>
-            <div class="col col-desktop-4">
-              <img src="images/quem/quem04.jpg" alt="" />
-              <h2>Valores</h2>
-              <p>
-                Contrary to popular belief, Lorem Ipsum is not simply random
-                text. It has roots in a piece of classical Latin literature from
-                45 BC, making it over 2000 years old. Richard McClintock
-              </p>
+            <div id="img-box" class="col col-desktop-4 col-6">
+              <img src="images/quem/quem01.jpg" alt="" />
             </div>
           </div>
         </div>
@@ -112,9 +104,9 @@
               <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="quem_somos.html">Noivos</a></li>
-                <li><a href="clientes.html">Padrinhos</a></li>
+                <li><a href="padrinhos.html">Padrinhos</a></li>
                 <li><a href="local.html">Local</a></li>
-                <li><a href="contato.html">Lista de Presentes</a></li>
+                <li><a href="presentes.html">Lista de Presentes</a></li>
                 <li><a href="contato.html">Confirmar Presença</a></li>
               </ul>
             </nav>
@@ -123,7 +115,7 @@
       </div>
     </footer>
     <div id="copyright">
-      &copy; Chatschool - 2019 - Todos os direitos reservados
+      &copy; Felipe e Gabriela - 10/09/2022 - Toda a felicidade reservada
     </div>
   </body>
 </html>
