--- a/contato.html
+++ b/contato.html
@@ -24,9 +24,9 @@
               <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="quem_somos.html">Noivos</a></li>
-                <li><a href="clientes.html">Padrinhos</a></li>
+                <li><a href="padrinhos.html">Padrinhos</a></li>
                 <li><a href="local.html">Local</a></li>
-                <li><a href="contato.html">Lista de Presentes</a></li>
+                <li><a href="presentes.html">Lista de Presentes</a></li>
                 <li>
                   <a href="contato.html" class="active">Confirmar Presença</a>
                 </li>
@@ -34,60 +34,26 @@
             </nav>
           </div>
         </div>
-        <div class="row">
+        <div class="row" id="confirmacao">
           <div class="col col-desktop-12 title">
-            <h1>Alta Produtividade em tempo real</h1>
+            <h1>Confirme sua presença</h1>
           </div>
         </div>
       </div>
     </header>
     <main>
       <section class="section section-center">
-        <h2>Contato</h2>
-        <p class="subtitle">
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's
-        </p>
+        <h2>Confirmar Presença</h2>
         <div class="container">
-          <form class="row">
-            <div class="col col-desktop-6 col-6">
-              <div class="input-control">
-                <input id="nome" name="nome" type="text" placeholder="Nome" />
-                <label for="nome">Nome</label>
-              </div>
-              <div class="input-control">
-                <input
-                  id="email"
-                  name="email"
-                  type="email"
-                  placeholder="E-mail"
-                />
-                <label for="email">E-mail</label>
-              </div>
-              <div class="input-control">
-                <input
-                  id="telefone"
-                  name="telefone"
-                  type="number"
-                  placeholder="Telefone"
-                />
-                <label for="telefone">Telefone</label>
-              </div>
-            </div>
-            <div class="col col-desktop-6 col-6">
-              <div class="input-control">
-                <textarea
-                  id="mensagem"
-                  name="mensagem"
-                  cols="30"
-                  rows="10"
-                  placeholder="Mensagem"
-                ></textarea>
-                <label for="mensagem">Mensagem</label>
-              </div>
-            </div>
-            <input type="submit" value="Enviar" class="btn orange" />
-          </form>
+          <iframe
+            src="https://docs.google.com/forms/d/e/1FAIpQLSeFsPvWN0q676ASkZvrCQpehUot2EZoNPL2QpwUxl_EsCDyow/viewform?embedded=true"
+            width="800"
+            height="898"
+            frameborder="0"
+            marginheight="0"
+            marginwidth="0"
+            >Carregando…</iframe
+          >
         </div>
       </section>
     </main>
@@ -96,21 +62,10 @@
         <div class="row">
           <div class="col col-offset-desktop-1 col-desktop-3">
             <p>
-              <a href=""
-                ><img src="images/logo.png" alt="Logo da Chatschool"
-              /></a>
-            </p>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book. It has
-              survived not only five centuries, but also the leap into
-              electronic typesetting, remaining essentially unchanged. It was
-              popularised in the 1960s with the release of Letraset sheets
-              containing Lorem Ipsum passages, and more recently with desktop
-              publishing software like Aldus PageMaker including versions of
-              Lorem Ipsum.
+              Bom pessoal, é chegada a hora de trocarmos as alianças e desejamos
+              que vocês façam parte disso. Sem dúvida, vocês que estão aqui são
+              de alguma forma especiais para nós. Portanto, esperamos que
+              consigam apreciar este momento tão importante de nossas vidas.
             </p>
           </div>
           <div class="col col-offset-desktop-1 col-desktop-2 col-2">
@@ -118,23 +73,19 @@
             <nav>
               <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="quem_somos.html">Quem Somos</a></li>
-                <li><a href="clientes.html">Clientes</a></li>
-                <li><a href="equipe.html">Equipe</a></li>
-                <li><a href="contato.html">Contato</a></li>
+                <li><a href="quem_somos.html">Noivos</a></li>
+                <li><a href="padrinhos.html">Padrinhos</a></li>
+                <li><a href="local.html">Local</a></li>
+                <li><a href="presentes.html">Lista de Presentes</a></li>
+                <li><a href="contato.html">Confirmar Presença</a></li>
               </ul>
             </nav>
-          </div>
-          <div class="col col-desktop-3 social col-4">
-            <a href=""><img src="images/social-facebook.png" alt="" /></a>
-            <a href=""><img src="images/social-twitter.png" alt="" /></a>
-            <a href=""><img src="images/social-youtube.png" alt="" /></a>
           </div>
         </div>
       </div>
     </footer>
     <div id="copyright">
-      &copy; Chatschool - 2019 - Todos os direitos reservados
+      &copy; Felipe e Gabriela - 10/09/2022 - Toda a felicidade reservada
     </div>
   </body>
 </html>
